fixes spacing

--- a/client/src/components/Feed/feed.css
+++ b/client/src/components/Feed/feed.css
@@ -166,3 +166,14 @@
 .timeago {
   font-size: 13px;
 }
+
+.message {
+  background-color: rgba(244, 244, 244, 0.952);
+  border: solid black;
+  margin: 20px;
+  height: auto;
+  overflow:auto;
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+}
